--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dev_dependencies:
   markdown: ^4.0.1
   animated_splash_screen: ^1.2.0
   flutter_keyboard_visibility: ^5.2.0
+  font_awesome_flutter: ^9.2.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
