--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dev_dependencies:
   animated_splash_screen: ^1.2.0
   flutter_keyboard_visibility: ^5.2.0
   font_awesome_flutter: ^9.2.0
+  flutter_launcher_name: ^0.0.1
+
+
+flutter_launcher_name:
+    name: "LetTutor"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
