--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,6 @@ dev_dependencies:
   animated_splash_screen: ^1.2.0
   flutter_keyboard_visibility: ^5.2.0
   font_awesome_flutter: ^9.2.0
-  flutter_launcher_name: ^0.0.1
-
-
 flutter_launcher_name:
     name: "LetTutor"
 # For information on the generic Dart part of this file, see the
@@ -65,6 +62,7 @@ flutter_launcher_name:
 flutter:
   assets:
     - assets/images/logo.png
+    - assets/images/background.jpg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
