--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dev_dependencies:
   animated_splash_screen: ^1.2.0
   flutter_keyboard_visibility: ^5.2.0
   font_awesome_flutter: ^9.2.0
+  flag: ^6.0.0
+  flutter_localized_locales: ^2.0.3
+  flutter_rating_bar: ^4.0.0
+  cached_network_image: ^3.2.0
 flutter_launcher_name:
     name: "LetTutor"
 # For information on the generic Dart part of this file, see the
