--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -44,19 +44,22 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
-  cupertino_icons: ^1.0.2
+  flutter_lints: ^1.0.4
+  cupertino_icons: ^1.0.4
   custom_navigation_bar: ^0.8.2
   flutter_icons: ^1.1.0
   intl: ^0.17.0
   markdown: ^4.0.1
   animated_splash_screen: ^1.2.0
   flutter_keyboard_visibility: ^5.2.0
-  font_awesome_flutter: ^9.2.0
+  font_awesome_flutter: ^10.1.0
   flag: ^6.0.0
   flutter_localized_locales: ^2.0.3
   flutter_rating_bar: ^4.0.0
   cached_network_image: ^3.2.0
+  import_sorter: ^4.6.0
+  provider: ^6.0.2
+
 flutter_launcher_name:
     name: "LetTutor"
 # For information on the generic Dart part of this file, see the
@@ -67,6 +70,7 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/images/background.jpg
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
