--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
-
+  swipe_to: 1.0.2
+  liquid_swipe: ^2.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,7 +50,7 @@ dev_dependencies:
   custom_navigation_bar: ^0.8.2
   flutter_icons: ^1.1.0
   intl: ^0.17.0
-  markdown: ^4.0.1
+  markdown: ^5.0.0
   animated_splash_screen: ^1.2.0
   flutter_keyboard_visibility: ^5.2.0
   font_awesome_flutter: ^10.1.0
