--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.4
   swipe_to: 1.0.2
   liquid_swipe: ^2.1.1
+  cached_network_image: ^3.2.0
+  sticky_grouped_list: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,7 +59,6 @@ dev_dependencies:
   flag: ^6.0.0
   flutter_localized_locales: ^2.0.3
   flutter_rating_bar: ^4.0.0
-  cached_network_image: ^3.2.0
   import_sorter: ^4.6.0
   provider: ^6.0.2
 
