--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   liquid_swipe: ^2.1.1
   cached_network_image: ^3.2.0
   sticky_grouped_list: ^2.1.0
+  url_launcher: ^6.0.20
 dev_dependencies:
   flutter_test:
     sdk: flutter
