--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.2.0
   sticky_grouped_list: ^2.1.0
   url_launcher: ^6.0.20
+  persistent_bottom_nav_bar: ^4.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,7 +51,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.4
   cupertino_icons: ^1.0.4
-  custom_navigation_bar: ^0.8.2
+  custom_navigator: ^0.3.0
   flutter_icons: ^1.1.0
   intl: ^0.17.0
   markdown: ^5.0.0
