--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,11 @@ dependencies:
   liquid_swipe: ^2.1.1
   cached_network_image: ^3.2.0
   sticky_grouped_list: ^2.1.0
-  url_launcher: ^6.0.20
+  url_launcher: ^6.1.0
   persistent_bottom_nav_bar: ^4.0.2
   expandable: ^5.0.1
-  chewie: ^1.3.2
   flutter_localized_locales: ^2.0.3
+  video_viewer: ^1.2.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
