--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_localized_locales: ^2.0.3
   video_viewer: ^1.2.7
   syncfusion_flutter_calendar: ^20.1.51
+  provider: ^6.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^1.0.4
   cupertino_icons: ^1.0.4
   custom_navigator: ^0.3.0
   flutter_icons: ^1.1.0
@@ -65,7 +66,6 @@ dev_dependencies:
   flag: ^6.0.0
   flutter_rating_bar: ^4.0.0
   import_sorter: ^4.6.0
-  provider: ^6.0.2
   video_player: ^2.4.0
 flutter_launcher_name:
     name: "LetTutor"
@@ -75,8 +75,7 @@ flutter_launcher_name:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - assets/images/logo.png
-    - assets/images/background.jpg
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
